# popular_it_certification_scraper

./: .gitignore  Pipfile  README.md  config.ini  config.json  config.json5  lib.py  main.py  popular_it_certs_by_position.py  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md  documentation-requrest.md  enhancement-request.md  feature_request.md
