[project]
name = "popular_it_certification_scraper"
version = "0.1.0"
description = ""
authors = [
    {name = "Salmaan Saeed"}
]
readme = "README.md"
requires-python = ">=3.14,<4"
dependencies = [
    "beautifulsoup4 (>=4.14.3,<5.0.0)",
    "selenium (>=4.44.0,<5.0.0)",
    "lxml (>=6.1.1,<7.0.0)",
    "pandas (>=3.0.3,<4.0.0)",
    "pyautogui (>=0.9.54,<0.10.0)"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false
[dependency-groups]
dev = [
    "deptry (>=0.25.1,<0.26.0)"
]
